# ambassador

./: admin.http
django-ambassador/: .gitignore  .pdm.toml  Dockerfile  admin.http  docker-compose.yaml  pyproject.toml  requirements.txt
django-ambassador/administrator/: serializers.py  urls.py  views.py
django-ambassador/app/: settings.py  urls.py
django-ambassador/common/: authentication.py  serializers.py  urls.py  views.py
django-ambassador/core/: models.py
django-ambassador/core/management/commands/: populate_ambassador.py  wait_for_db.py
django-ambassador/core/migrations/: 0001_initial.py  0002_auto_20220610_1623.py  0003_product.py  0004_link.py  0005_order_orderitem.py
