[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Julio Felipe", email = "julio@informach.com.br"},
]
dependencies = [
    "django~=4.0",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8~=4.0",
]
